# INVSC-janus

./: .gitignore  CMakeLists.txt  CNAME  README.md  annotated.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  group__janus.html  group__janus__aux.html  group__janus__io.html  iarpa__janus_8h_source.html  iarpa__janus__aux_8h_source.html  iarpa__janus__io_8h_source.html  index.html  janus_8h_source.html  janus__aux_8h_source.html  janus__io_8h_source.html  janus_enum.html  modules.html  pages.html  structjanus__attribute__list-members.html  structjanus__attribute__list.html  structjanus__attributes-members.html  structjanus__attributes.html  structjanus__image-members.html  structjanus__image.html  structjanus__metric-members.html  structjanus__metric.html  structjanus__metrics-members.html  structjanus__metrics.html  structjanus__object__list__type-members.html  structjanus__object__list__type.html  structjanus__object__type-members.html  structjanus__object__type.html  technical_considerations.html  todo.html
data/: Kirchner.csv  LFW_YTF_sequester.csv  Toledo.csv  lfw_ytf.py  meds.csv  metadata.csv  runCS0.sh  runIJBA.sh  sources.csv
docs/: CMakeLists.txt  Doxyfile.in
doxygen/: CMakeLists.txt  Doxyfile.in
harness/: CMakeLists.txt  janus_harness.cpp  janus_harness.h
harness/utils/: CMakeLists.txt  janus_cluster.cpp  janus_create_gallery.cpp  janus_create_templates.cpp  janus_detect.cpp  janus_search.cpp  janus_verify.cpp
implementations/: CMakeLists.txt
implementations/opencv_io/: CMakeLists.txt  janus_ocv_util.cpp  opencv_io.cpp  opencv_io.h
implementations/pittpatt5/: CMakeLists.txt  pittpatt5.cpp
implementations/pittpatt5/cmake/: FindPP5.cmake
include/: iarpa_janus.h  iarpa_janus_aux.h  iarpa_janus_io.h  janus.h  janus_aux.h  janus_io.h
pittpatt/: janus_pittpatt.c
search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_c.js  classes_0.js  enums_0.js  enumvalues_0.js  functions_0.js  groups_0.js  pages_0.js  search.js  searchdata.js  typedefs_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_b.js  variables_d.js
src/: CMakeLists.txt  janus.c  janus.cpp  janus_io.cpp
src/caffe/: CMakeLists.txt  caffe.cpp  caffe_io.cpp
src/cmake/: FindCOG.cmake  FindCognitec.cmake  FindPP4.cmake  FindPP5.cmake  FindPittPatt5.cmake
src/cognitec/: CMakeLists.txt  cognitec.cpp
src/doxygen/: CMakeLists.txt  Doxyfile.in
src/janus/: CMakeLists.txt  janus.c  janus_allocate_media.c  janus_allocate_object.c  janus_allocate_object_list.c  janus_detect.c  janus_finalize.c  janus_free_media.c  janus_free_object.c  janus_free_object_list.c  janus_initialize.c  janus_template_impl.h  janus_template_type.h
src/janus-pittpatt/: CMakeLists.txt  janus-pittpatt.c  janus_pittpatt.c
src/janus_io/: CMakeLists.txt  janus_close_video.c  janus_open_video.c  janus_read_frame.c  janus_read_image.c  janus_video_type.h
src/janus_io-opencv/: CMakeLists.txt  janus_read_image.c  janus_read_image.cpp
src/janus_io-pittpatt/: CMakeLists.txt  janus_read_image.c
src/opencv_io/: CMakeLists.txt  janus_ocv_util.cpp  opencv_io.cpp  opencv_io.h
src/pittpatt/: CMakeLists.txt  FindPittPatt5.cmake  janus.c  janus_mem.c  pittpatt.c  pittpatt.cpp  pittpatt_io.c  pittpatt_io.cpp
src/pittpatt4/: CMakeLists.txt  pittpatt4.cpp
src/pittpatt_io/: CMakeLists.txt  pittpatt_io.c
src/tests/: CMakeLists.txt  attribute.cpp  detect_image.cpp  detect_images.cpp  initialize.c  initialize.cpp  janus_enroll.cpp  janus_verify.cpp  read_image.cpp  read_video.cpp  track_video.cpp
src/tests/aux/: detect_images.cpp  track_video.cpp
src/utils/: CMakeLists.txt  ijba_verify.cpp  janus_cluster.cpp  janus_create_gallery.cpp  janus_create_templates.cpp  janus_detect.cpp  janus_enroll.cpp  janus_evaluate.cpp  janus_evaluate_search.cpp  janus_evaluate_verify.cpp  janus_ocv_util.cpp  janus_search.cpp  janus_simmat.cpp  janus_verify.cpp  janus_verify_pairwise.cpp
