project(janus)
cmake_minimum_required(VERSION 2.8.6)

set(JANUS_NAME "Janus")
set(JANUS_DESCRIPTION "IARPA Janus Program API")

# Extract version info from header file
file(STRINGS ${CMAKE_CURRENT_SOURCE_DIR}/include/janus.h JANUS_VERSION_MAJOR
     REGEX "#define[ ]+JANUS_VERSION_MAJOR[ ]+[0-9]+")
file(STRINGS ${CMAKE_CURRENT_SOURCE_DIR}/include/janus.h JANUS_VERSION_MINOR
     REGEX "#define[ ]+JANUS_VERSION_MINOR[ ]+[0-9]+")
file(STRINGS ${CMAKE_CURRENT_SOURCE_DIR}/include/janus.h JANUS_VERSION_PATCH
     REGEX "#define[ ]+JANUS_VERSION_PATCH[ ]+[0-9]+")
string(REGEX MATCH "[0-9]+" JANUS_VERSION_MAJOR ${JANUS_VERSION_MAJOR})
string(REGEX MATCH "[0-9]+" JANUS_VERSION_MINOR ${JANUS_VERSION_MINOR})
string(REGEX MATCH "[0-9]+" JANUS_VERSION_PATCH ${JANUS_VERSION_PATCH})
configure_file(include/janus.h ${CMAKE_CURRENT_BINARY_DIR}/version.stamp)
set(JANUS_VERSION ${JANUS_VERSION_MAJOR}.${JANUS_VERSION_MINOR}.${JANUS_VERSION_PATCH})

add_subdirectory(src)
add_subdirectory(doxygen)

install(FILES LICENSE.txt DESTINATION .)
install(DIRECTORY include DESTINATION .)

set(CPACK_PACKAGE_VERSION_MAJOR ${JANUS_VERSION_MAJOR})
set(CPACK_PACKAGE_VERSION_MINOR ${JANUS_VERSION_MINOR})
set(CPACK_PACKAGE_VERSION_PATCH ${JANUS_VERSION_PATCH})
include(CPack)
