list(LENGTH JANUS_TEST_IMPLEMENTATIONS NUM_IMPLEMENTATIONS_PLUSONE)
math(EXPR NUM_IMPLEMENTATIONS "${NUM_IMPLEMENTATIONS_PLUSONE} - 1")

file(GLOB TESTS *.cpp)
foreach(INDEX RANGE ${NUM_IMPLEMENTATIONS})
  list(GET JANUS_TEST_IMPLEMENTATIONS ${INDEX} IMPLEMENTATION)
  list(GET JANUS_TEST_SDK_PATHS ${INDEX} SDK_PATH)

  foreach(TEST ${TESTS})
    get_filename_component(TEST_BASENAME ${TEST} NAME_WE)
    set(TEST_NAME "test_${IMPLEMENTATION}_${TEST_BASENAME}")
    add_executable(${TEST_NAME} ${TEST})
    target_link_libraries(${TEST_NAME} ${IMPLEMENTATION})
    install(TARGETS ${TEST_NAME} RUNTIME DESTINATION bin)
    add_test(NAME ${TEST_NAME} WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${TEST_NAME} ${SDK_PATH})
  endforeach()
endforeach()
