list(LENGTH JANUS_TEST_IMPLEMENTATIONS NUM_IMPLEMENTATIONS_PLUSONE)
math(EXPR NUM_IMPLEMENTATIONS "${NUM_IMPLEMENTATIONS_PLUSONE} - 1")
file(GLOB JANUS_HEADERS ${CMAKE_SOURCE_DIR}/include/*.h)

file(GLOB TESTS *.cpp)
foreach(INDEX RANGE ${NUM_IMPLEMENTATIONS})
  list(GET JANUS_TEST_IMPLEMENTATIONS ${INDEX} IMPLEMENTATION)
  list(GET JANUS_TEST_SDK_PATHS ${INDEX} SDK_PATH)

  foreach(IMPLEMENTATION_IO ${JANUS_IO_TEST_IMPLEMENTATIONS})
    foreach(TEST ${TESTS})
      get_filename_component(TEST_BASENAME ${TEST} NAME_WE)
      set(TEST_NAME "test_${IMPLEMENTATION}_${IMPLEMENTATION_IO}_${TEST_BASENAME}")
      add_executable(${TEST_NAME} ${TEST} ${JANUS_HEADERS})
      target_link_libraries(${TEST_NAME} ${IMPLEMENTATION} ${IMPLEMENTATION_IO})
      install(TARGETS ${TEST_NAME} RUNTIME DESTINATION bin)
      add_test(NAME ${TEST_NAME} WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${TEST_NAME} ${SDK_PATH})
    endforeach()
  endforeach()
endforeach()
