if(NOT ${JANUS_TEST_IMPLEMENTATION} STREQUAL "")
  file(GLOB TESTS *.cpp)
  foreach(TEST ${TESTS})
    get_filename_component(TEST_NAME ${TEST} NAME_WE)
    add_executable(${TEST_NAME} ${TEST})
    target_link_libraries(${TEST_NAME} ${JANUS_TEST_IMPLEMENTATION} ${JANUS_IO_TEST_IMPLEMENTATION})
    add_test(NAME ${TEST_NAME} WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${TEST_NAME} ${JANUS_TEST_SDK_PATH})
  endforeach()
endif()
